[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Scenes/HurtHitSystem/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Enemies/EnemyStatsManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HurtHitSystem/HitBox.tscn" type="PackedScene" id=4]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Collider" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_layer = 16

[node name="HitBox" parent="." instance=ExtResource( 4 )]
collision_mask = 8

[node name="EnemyStatsManager" parent="." instance=ExtResource( 3 )]

[connection signal="hit" from="HurtBox" to="." method="_on_HurtBox_hit"]
[connection signal="enemy_died" from="EnemyStatsManager" to="." method="_on_EnemyStats_enemy_died"]

[editable path="HitBox"]
